Fix AutosizedSection showing too wide on mobile layouts with wide content

--- a/frontend/src/components/Slide/Slide.scss
+++ b/frontend/src/components/Slide/Slide.scss
@@ -42,6 +42,7 @@
 
   & > * {
     min-height: 0;
+    min-width: 0;
   }
 
   .slide-title {
