--- a/frontend/src/libraries/ui/AutosizedSection.sass
+++ b/frontend/src/libraries/ui/AutosizedSection.sass
@@ -2,6 +2,6 @@
   max-width: 100%
   overflow: hidden
 .autosized-section-inner
-  // width: fit-content
-  //height: fit-content
-  transform-origin: top center
+  width: fit-content
+  height: fit-content
+  transform-origin: top left
